2002-07-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/grob-property-description.scm (minimum-space-pair): Remove.

	* Documentation/windows/README: 
	* Documentation/windows/guile-1.5.6-1.5.6.jcn2.patch:
	* Documentation/windows/changelog: New file.

	* Documentation/windows/lilypond.hint (requires): libguile14 (was:
	guile).

2002-07-03  Han-Wen  <hanwen@cs.uu.nl>

	* lily/grob-property.cc (HASHING_FOR_MUTABLE_PROPS): experiment:
	try hash tables for mutable properties.

	* lily/align-interface.cc: remove aligned-interface and props
	minimum-space-pair extra-space 

	* lily/grob-property.cc: new file move grob prop handling here.

	* lily/lily-guile.cc (ly_deep_copy): add vector support

	* lily/break-substitution.cc (do_break_substitution): add vector
	support.

	* lily/spanner.cc: remove extend_spanner_over_* funcs.

2002-07-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4 (STEPMAKE_GET_VERSION): Workaround for
	broken Debian gcc version string: 'gcc (GCC) 3.1.1 20020606
	(Debian prerelease)'

2002-07-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/bar-check-iterator.cc (process): change
	barbarCheckNoSynchronize to barCheckSynchronize

	* Documentation/user/bugs.itexi: move to introduction, remove.

	* Documentation/user/*.itexi: general carnage/cleanage.
	
	* Documentation/user/internals.itely: split most of file into
	internal documentation (.scm and .cc)

	* buildscripts/make-font-dir.py: put designsize in to X font
	sWidth field

	* make/lilypond.redhat.spec.in: postinstall bugfix

2002-07-02  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/ambitus-engraver.cc, lily/ambitus.cc: Various bugfixes:
	avoid segfault on undefined ambitus pitch; avoid wasteful creation
	of pitch smobs; defer computation of centralCPosition beyond first
	timestep to catch also clefs outside of the current voice context.

2002-07-02  Han-Wen  <hanwen@cs.uu.nl>

	* input/template/satb.ly: new file

2002-07-01  Jan Nieuwenhuizen  <janneke@gnu.org>
